--- a/order.opam
+++ b/order.opam
@@ -1,11 +1,11 @@
 opam-version: "1.2"
 maintainer: "Rizo Isrof <rizo@odis.io>"
 authors: ["Rizo Isrof <rizo@odis.io>"]
-homepage: "http://rizo.github.io/compare"
-doc: "http://rizo.github.io/compare/doc"
+homepage: "http://rizo.github.io/order"
+doc: "http://rizo.github.io/order/doc"
 license: "ISC"
-dev-repo: "https://github.com/rizo/compare.git"
-bug-reports: "https://github.com/rizo/compare/issues"
+dev-repo: "https://github.com/rizo/order.git"
+bug-reports: "https://github.com/rizo/order/issues"
 
 descr: "Comparison and ordering of OCaml values."
 tags: ["org:rizo" "comparison"]
